new templete edit

--- a/jhipster/src/main/webapp/app/entities/quan-ly-thong-so/list/quan-ly-thong-so.component.html
+++ b/jhipster/src/main/webapp/app/entities/quan-ly-thong-so/list/quan-ly-thong-so.component.html
@@ -42,6 +42,19 @@
             <ul *ngIf="searchResults.length > 0">
               <li *ngFor="let result of searchResults">{{ result.maThongSo }}</li>
             </ul>
+
+            <angucomplete-alt id="ex2"
+              placeholder="Search"
+              pause="300"
+              selected-object="selectedThongSo"
+              local-data="people"
+              local-search="localSearch"
+              title-field="maThongSo"
+              description-field="twitter"
+              minlength="1"
+              input-class="form-control form-control-small"
+              match-class="highlight" />
+
           </th>
           <th scope="col" jhiSortBy="tenThongSo">
             <span>Tên thông số</span>
